[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lucid-component-fixture-cpu"
dynamic = ["version"]
description = "LUCID fixture component that publishes CPU metrics for integration testing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LUCID" }]
dependencies = [
  "lucid-component-base @ git+https://github.com/LucidLabPlatform/lucid-component-base@v0.5.2",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.entry-points."lucid.components"]
fixture_cpu = "lucid_component_fixture_cpu.component:FixtureCpuComponent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
